# openrefine-tauri

./: LICENSE.txt  README.md  package.json
resources/linux/webapp/extensions/wikidata/test-output/Default suite/: Default test.xml
resources/linux/webapp/extensions/wikidata/test-output/old/Default suite/: methods-alphabetical.html
resources/windows/webapp/WEB-INF/classes/: git.properties
resources/windows/webapp/WEB-INF/classes/com/google/refine/browsing/facets/: .TimeRangeFacet.java.swp
resources/windows/webapp/extensions/wikidata/test-output/: emailable-report.html  index.html  testng-failed.xml  testng-results.xml
resources/windows/webapp/extensions/wikidata/test-output/Default suite/: Default test.html
resources/windows/webapp/extensions/wikidata/test-output/junitreports/: TEST-org.openrefine.wikidata.commands.PreviewWikibaseSchemaCommandTest.xml
resources/windows/webapp/extensions/wikidata/test-output/old/Default suite/: classes.html  methods.html  testng.xml.html
scripts/: prepare.js
src/: App.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
